Fix the alignment of button groups below messages
See https://www.woltlab.com/community/thread/301307-filebase-file-buttons-need-to-be-fixed/?postID=1936530#post1936530

--- a/wcfsetup/install/files/style/ui/message.scss
+++ b/wcfsetup/install/files/style/ui/message.scss
@@ -477,7 +477,6 @@
 }
 
 .messageFooterGroup {
-	align-items: center;
 	display: flex;
 	flex-wrap: wrap;
 
@@ -490,6 +489,7 @@
 	}
 
 	> woltlab-core-reaction-summary {
+		align-self: center;
 		flex: 0 1 auto;
 
 		@include wcfFontSmall;
